# tdd-goat

./: pyproject.toml  web_testing.py
testing_goat/: manage.py
testing_goat/testing_goat/: asgi.py  settings.py  urls.py  wsgi.py
